--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
+	implementation 'org.neo4j:neo4j-ogm-core:4.0.5'
+	implementation 'org.neo4j:neo4j-ogm-bolt-driver:4.0.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:junit-jupiter'
